fixed line spacing and other padding

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,56 @@
 /* imported fonts */
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kavoon&display=swap');
 
+/* CSS Reset */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 /* Root Variables */
 :root{
     --teal: #4CA7C0;
@@ -34,6 +84,10 @@ main{
     margin: 0;
 }
 
+p{
+    line-height: 20px;
+}
+
 h1, h2{
     font-family: Kavoon;
 }
@@ -42,6 +96,13 @@ h1{
     font-size: 3em;
     text-align: center;
     margin: 0;
+    padding: 10px;
+    padding-bottom: 0;
+}
+
+header p{
+    padding: 20px;
+    padding-bottom: 30px;
 }
 
 nav{
@@ -54,13 +115,17 @@ nav h2{
     font-size: 1.5em;
     color: var(--dark-gray);
     font-family: inter;
+    font-weight: bold;
     font-style: italic;
-    padding: 2px;
-    margin: 0 auto;
+    padding: 5px;
 }
 
 ul > li{
     list-style-type: none;
+}
+
+a{
+    text-decoration: none;
 }
 
 nav ul{
@@ -71,12 +136,16 @@ nav ul{
 nav li{
     color: var(--purple);
     width: 350px;
-    height: 25px;
+    height: 20px;
     background-color: var(--white);
     font-size: 1.15em;
     font-weight: bold;
     margin: 5px auto;   
-    padding: 5px;
+    padding: 10px;
+}
+
+nav li:hover{
+    background-color: var(--lavender);
 }
 
 h2{
@@ -93,6 +162,7 @@ h3{
 
 h4{
     font-size: 1.15em;
+    font-weight: bold;
     margin: 5px;
     color: var(--purple);
 }
@@ -112,7 +182,7 @@ h4{
 
 #personal-development{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -122,12 +192,12 @@ h4{
 #personal-development p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #career-coaching{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -137,12 +207,12 @@ h4{
 #career-coaching p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #relationship-coaching{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -152,12 +222,12 @@ h4{
 #relationship-coaching p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #supportive-community{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -167,12 +237,12 @@ h4{
 #supportive-community p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #focused-sessions{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -182,12 +252,12 @@ h4{
 #focused-sessions p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #interactive-learning{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -197,12 +267,12 @@ h4{
 #interactive-learning p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #flexible-learning{
     align-content: center;
-    margin: 10px auto;
+    margin: 15px auto;
     padding: 5px;
     max-width: 380px;
     background-color: var(--white);
@@ -212,7 +282,7 @@ h4{
 #flexible-learning p{
     margin: 0 auto;
     max-width: 350px;
-    padding: 5px;
+    padding: 10px;
 }
 
 #why-us{
@@ -266,6 +336,10 @@ h4{
     border-radius: 10px;
 }
 
+#pricing{
+    padding: 10px;
+}
+
 section table{
     margin: 0 auto;
     background-color: var(--yellow);
@@ -280,6 +354,7 @@ section table th{
 section table td{
     background-color: var(--white);
     padding: 15px;
+    border: solid 3px var(--yellow);
 }
 
 #scheduling{
@@ -292,14 +367,20 @@ section table td{
     left: -10px;
 }
 
-a{
-    text-decoration: none;
+#scheduling h2{
+    padding: 2.5px;
+}
+
+#scheduling p{
+    padding: 2.5px;
+    padding-bottom: 10px;
 }
 
 #scheduling a{
     display: block;
     text-align: center;
     padding: 20px;
+    margin: 0px;
     color: var(--dark-gray);
     background-color: var(--white);
     font-weight: bold;
